// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a long caption properly 1`] = `
<div
  className="article-image"
>
  <img
    className="file__BlockImage-s1425qn5-0 kMcghC"
    height="auto"
    src="https://d32dm0rphc51dk.cloudfront.net/CpHY-DRr7KW0HGXLslCXHw/larger.jpg"
    width="100%"
  />
  <div
    className="file__CaptionContainer-g8fqxu-0 kDFOOQ"
  >
    <div
      className="sc-bdVaJa bGfehm"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Photo by Adam Kuehl for Artsy. Image courtesy of the Guggenheim Museum.</p>",
        }
      }
    />
    <div
      className="file__ViewFullscreenLink-s8d1ii9-0 jOPcML"
    >
      View Fullscreen
    </div>
  </div>
</div>
`;

exports[`renders properly 1`] = `
<div
  className="article-image"
>
  <img
    className="file__BlockImage-s1425qn5-0 kMcghC"
    height="auto"
    src="https://artsy-media-uploads.s3.amazonaws.com/co8j2xq40ROMyBrJQm_4eQ%2FDafenOilPaintingVillage_AK03.jpg"
    width="100%"
  />
  <div
    className="file__CaptionContainer-g8fqxu-0 kDFOOQ"
  >
    <div
      className="sc-bdVaJa bGfehm"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Photo by Adam Kuehl for Artsy.</p>",
        }
      }
    />
    <div
      className="file__ViewFullscreenLink-s8d1ii9-0 jOPcML"
    >
      View Fullscreen
    </div>
  </div>
</div>
`;
